Fix spacing

--- a/src/styles/components/_project-thumbnail.scss
+++ b/src/styles/components/_project-thumbnail.scss
@@ -129,6 +129,8 @@ body {
         border-radius: 4px;
         padding: 4px 12px;
         width: max-content;
+        margin-top: 8px;
+        margin-bottom: 16px;
         .link {
           svg {
             margin-right: 0;
